# triqs_interface

./: .travis.yml  CMakeLists.txt  README.md
c++/: CMakeLists.txt  config.hpp  solve_parameters.hpp  solver_core.cpp  solver_core.hpp
python/: CMakeLists.txt  __init__.py  alps_cthyb_converters.hxx  alps_cthyb_desc.py  alps_cthyb_parameters.rst  alps_cthyb_solver.py  version.py.in
samples/: aim_alps.py
src/: config.hpp  solve_parameters.hpp  solver_core.cpp  solver_core.hpp
travis/: build_prereq.sh  build_prereq.travis.sh  full_path.sh
